# WaveFD.jl

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Project.toml  README.md
.github/workflows/: Tests.yml  ci.yml
benchmark/: README.md  benchmarks.jl  mcells_per_second.jl
dev/: index.html  search_index.js
dev/search/: index.html
docs/: .gitignore  make.jl  makefile
docs/2017.09.20_IsotropicAcousticQ/: 2017.09.20_IsotropicAcousticQ.tex  makefile
docs/2017.10.02_VtiAcousticQ/: 2017.10.02_VtiAcousticQ.tex  makefile
docs/latex_notes/: IsotropicAcousticQ.tex  VtiAcousticQ.tex  makefile
docs/src/: index.md
src/: CMakeLists.txt  Wave.jl  WaveFD.jl  absorb.h  absorb.jl  compressedio.jl  illumination.c  illumination.jl  makefile  prop2DAcoIsoDenQ_DEO2_FDTD.cc  prop2DAcoIsoDenQ_DEO2_FDTD.h  prop2DAcoIsoDenQ_DEO2_FDTD.jl  prop2DAcoTTIDenQ_DEO2_FDTD.cc  prop2DAcoTTIDenQ_DEO2_FDTD.h  prop2DAcoTTIDenQ_DEO2_FDTD.jl  prop2DAcoVTIDenQ_DEO2_FDTD.cc  prop2DAcoVTIDenQ_DEO2_FDTD.h  prop2DAcoVTIDenQ_DEO2_FDTD.jl  prop3DAcoIsoDenQ_DEO2_FDTD.cc  prop3DAcoIsoDenQ_DEO2_FDTD.h  prop3DAcoIsoDenQ_DEO2_FDTD.jl  prop3DAcoTTIDenQ_DEO2_FDTD.cc  prop3DAcoTTIDenQ_DEO2_FDTD.h  prop3DAcoTTIDenQ_DEO2_FDTD.jl  prop3DAcoVTIDenQ_DEO2_FDTD.cc  prop3DAcoVTIDenQ_DEO2_FDTD.h  prop3DAcoVTIDenQ_DEO2_FDTD.jl  propagatorStaticFunctions.h  spacetime.cc  spacetime.jl  stencil.jl  wavelet.jl
test/: absorb.jl  compressedio.jl  imgcondition.jl  makefile  runtests.jl  spacetime.jl  test_pure_threading.jl  test_pure_threading_KernelAbs.jl  test_pure_threading_WaveFD.jl  test_pure_threading_floops.jl  valgrind_prop2DAcoIsoDenQ_DEO2_FDTD.cc  valgrind_prop2DAcoTTIDenQ_DEO2_FDTD.cc  valgrind_prop2DAcoVTIDenQ_DEO2_FDTD.cc  valgrind_prop3DAcoIsoDenQ_DEO2_FDTD.cc  valgrind_prop3DAcoTTIDenQ_DEO2_FDTD.cc  valgrind_prop3DAcoVTIDenQ_DEO2_FDTD.cc  wavelet.jl
v0.1.1/: index.html
v0.1.1/search/: index.html
v0.2.0/: index.html
v0.2.0/search/: index.html
v0.3.0/: index.html
v0.3.0/search/: index.html
v0.3.1/: index.html
v0.3.1/search/: index.html
v0.4.0/: index.html
v0.4.0/search/: index.html
v0.5.0/: index.html
v0.5.0/search/: index.html
v0.5.1/: index.html
v0.5.1/search/: index.html
v0.6.0/: index.html
v0.6.0/search/: index.html
v0.6.1/: index.html
v0.6.1/search/: index.html
v0.6.2/: index.html
v0.6.2/search/: index.html
v0.6.3/: index.html
v0.6.3/search/: index.html
v0.7.0/: index.html
v0.7.0/search/: index.html
v0.7.1/: index.html
(+1 files in other folders)
